Fixing the inline alignment with menu;

--- a/src/less/listbox/ds6/listbox-base.less
+++ b/src/less/listbox/ds6/listbox-base.less
@@ -14,14 +14,16 @@
     background-color: @ds6-color-g201-gray;
     border: 1px solid @ds6-color-g204-gray;
     box-sizing: border-box;
-    // fixes the cursor in firefox
+    // fixes the cursor in firefox #1
     color: transparent;
-    text-shadow: 0 0 0 @ds6-color-p002-blue;
     cursor: default;
     font-family: inherit;
     font-size: 16px;
     height: @listbox-height;
     padding: 0 16px;
+    // fixes the cursor in firefox #1
+    text-shadow: 0 0 0 @ds6-color-p002-blue;
+    vertical-align: middle;
     width: 100%;
 
     &:focus {
